Revision history for HTML-Restrict

2.1.8   2013-06-06
        - Unlike 2.1.7, This release doesn't contain a local::lib.

2.1.7   2013-06-05
        - Removes Perl6::Junction in order to squash smartmatch warnings.

2.1.6   2013-05-06
        - Fixes incorrect use of Moo's weak_ref. (Thanks to Carwyn Ellis,
          Dagfinn Ilmari Mannsåker and Graham Knop for help with this.)

2.1.5   2013-05-01
        - Eliminates a circular reference. (Graham TerMarsch)

2.1.4   2013-04-19
        - Minor version should have been bumped in previous release. To bump it
          now would be confusing.
        - Require Moo 1.001000 as 1.000008 breaks this module.

2.1.3   2013-04-18
        - Add replace_img feature (David Golden).
        - Add 'cite' to list of attributes for URI scheme checks (David
          Golden).

2.1.2   2013-03-20
        - Fixes broken Pod in example script.
        - Adds x_contributors to META.json.

2.1.1   2013-03-08
        - Updates Pod.

2.1.0   2013-03-02
        - Allows attributes to be validated against regexes (perlpong).

2.0.0   2013-02-27
        - Bumps version to 2.0.0 due to new features breaking backwards
          compatibility.
        - Forces all tag rules to be provided in lower case.  Breaks
          backcompat, but mixed or upper case rules would have been silently
          ignored.  So, this is really a bug fix.
        - Strips content between script tags by default. Breaks backcompat,
          but the default behaviour was likely not what anyone wanted.
        - Strips content between style tags by default.  Breaks backcompat,
          but the default behaviour was likely not what anyone wanted.
        - Adds Pod for previously undocumented allow_comments,
          allow_declaration and strip_enclosed_content.
        - Ensures stripper stack is always reset (perlpong).
        - Protects against undef string comparison (perlpong).
        - Checks URI scheme for src attributes (perlpong).