@@ -18,7 +18,7 @@ my %module_build_args = (
     "Olaf Alders <olaf\@wundercounter.com>"
   ],
   "dist_name" => "HTML-Restrict",
-  "dist_version" => "2.1.8",
+  "dist_version" => "2.1.9",
   "license" => "perl",
   "module_name" => "HTML::Restrict",
   "recommends" => {},
@@ -33,7 +33,7 @@ my %module_build_args = (
     "Scalar::Util" => 0,
     "Sub::Quote" => 0,
     "URI" => 0,
-    "namespace::autoclean" => 0,
+    "namespace::clean" => 0,
     "strict" => 0
   },
   "script_files" => [],
@@ -45,17 +45,17 @@ my %module_build_args = (
 );
 
 
+my %fallback_build_requires = (
+  "Module::Build" => "0.3601",
+  "Test::Fatal" => 0,
+  "Test::More" => 0,
+  "warnings" => 0
+);
+
+
 unless ( eval { Module::Build->VERSION(0.4004) } ) {
-  my $tr = delete $module_build_args{test_requires};
-  my $br = $module_build_args{build_requires};
-  for my $mod ( keys %$tr ) {
-    if ( exists $br->{$mod} ) {
-      $br->{$mod} = $tr->{$mod} if $tr->{$mod} > $br->{$mod};
-    }
-    else {
-      $br->{$mod} = $tr->{$mod};
-    }
-  }
+  delete $module_build_args{test_requires};
+  $module_build_args{build_requires} = \%fallback_build_requires;
 }
 
 my $build = Module::Build->new(%module_build_args);
