@@ -8,6 +8,7 @@ thank to all of them.
 
 	* Arthur Axel 'fREW' Schmidt <frioux@gmail.com>
 	* David Golden <dagolden@cpan.org>
+	* Fitz Elliott <fitz.elliott@gmail.com>
 	* Graham TerMarsch <graham@howlingfrog.com>
 	* Mark Jubenville <mark@raybec.com>
 	* Olaf Alders <olaf@wundersolutions.com>
