@@ -4,7 +4,7 @@
       "Olaf Alders <olaf@wundercounter.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.120921",
+   "generated_by" : "Dist::Zilla version 5.006, CPAN::Meta::Converter version 2.132830",
    "license" : [
       "perl_5"
    ],
@@ -32,6 +32,11 @@
             "Module::Build" : "0.3601"
          }
       },
+      "develop" : {
+         "requires" : {
+            "Test::CPAN::Changes" : "0.19"
+         }
+      },
       "runtime" : {
          "requires" : {
             "Carp" : "0",
@@ -43,7 +48,7 @@
             "Scalar::Util" : "0",
             "Sub::Quote" : "0",
             "URI" : "0",
-            "namespace::autoclean" : "0",
+            "namespace::clean" : "0",
             "strict" : "0"
          }
       },
@@ -67,10 +72,11 @@
          "web" : "https://github.com/oalders/html-restrict"
       }
    },
-   "version" : "2.1.8",
+   "version" : "2.1.9",
    "x_contributors" : [
       "Arthur Axel 'fREW' Schmidt <frioux@gmail.com>",
       "David Golden <dagolden@cpan.org>",
+      "Fitz Elliott <fitz.elliott@gmail.com>",
       "Graham TerMarsch <graham@howlingfrog.com>",
       "Mark Jubenville <mark@raybec.com>",
       "Olaf Alders <olaf@wundersolutions.com>",
