@@ -3,7 +3,7 @@ author  = Olaf Alders <olaf@wundercounter.com>
 license = Perl_5
 copyright_holder = Olaf Alders
 copyright_year   = 2013
-version = 2.1.8
+version = 2.1.9
 main_module = lib/HTML/Restrict.pm
 
 [GatherDir]
@@ -34,6 +34,7 @@ MooX::Types::MooseLike = 0.23
 [AutoPrereqs]
 skip = ^MooX::Types::MooseLike
 
+[Test::CPAN::Changes]
 [Test::Perl::Critic]
 [ReadmeFromPod]
 [InstallGuide]
