@@ -2,12 +2,8 @@ use strict;
 
 package HTML::Restrict;
 {
-  $HTML::Restrict::VERSION = '2.1.8';
+  $HTML::Restrict::VERSION = '2.1.9';
 }
-
-use namespace::autoclean;
-
-use Moo 1.002000;
 
 use Carp qw( croak );
 use Data::Dump qw( dump );
@@ -17,6 +13,9 @@ use List::MoreUtils qw( any none );
 use Scalar::Util qw( reftype weaken );
 use Sub::Quote 'quote_sub';
 use URI;
+
+use Moo 1.002000;
+use namespace::clean;
 
 has 'allow_comments' => (
     is      => 'rw',
@@ -331,7 +330,7 @@ HTML::Restrict - Strip unwanted HTML tags and attributes
 
 =head1 VERSION
 
-version 2.1.8
+version 2.1.9
 
 =head1 SYNOPSIS
 
